# cistercian

./: .editorconfig  CMakeLists.txt  README.md  iconprovider.cpp  iconprovider.h  main.cpp  main.qml  plugin-clock.qml  plugin-taskbar.cpp  plugin-taskbar.h  qml.qrc  xdgimageprovider.cpp  xdgimageprovider.h
